welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: ')' expected but integer literal found.
	return ( if (you<3 || date <3) 0 else (you>7 || date >7) 2 else 1 )
                                                                 ^