welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
	return ( if (you<3 || date <3) 0 else (you>7 || date >7) 2 else 1 )
}
